# german-learn

./: Cargo.toml  README.md
config/: ai.toml
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: hooks.server.ts
frontend/src/lib/components/: FlashCard.svelte  PhoneFrame.svelte
frontend/src/lib/server/: auth.ts
frontend/src/lib/styles/: phone-frame.css
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/coming-soon/: +page.svelte
frontend/src/routes/course-summary/: +page.svelte
frontend/src/routes/course-summary-alt/: +page.svelte
frontend/src/routes/flashcard/: +page.ts
frontend/src/types/: better-auth-shim.d.ts
migration-docs/: data_export.sql  schema.sql  schema_export.sql
references/: gpt5_flashcard.html
references/rust-flashcard-backend/: Cargo.toml  mastered_words.txt  unmastered_words.txt  vocab.txt
references/rust-flashcard-backend/src/: main.rs
references/svelte-flashcard-frontend/: package-lock.json  package.json
references/svelte-flashcard-frontend/src/: app.html
src/: auth.rs  config.rs  error.rs  main.rs  state.rs
src/checkin/: mod.rs
src/entity/: adjectiv_adverb.rs  flashcard_progress.rs  flashcard_reviews.rs  mod.rs  prelude.rs  user_flashcard_progress.rs  user_flashcard_reviews.rs  vocabulary_entries.rs  worter_des_substantivs.rs  worter_des_verbs.rs
src/entries/: mod.rs
src/flashcard/: dto.rs  mod.rs  routes.rs  service.rs
woeter/: config.rs  handlers.rs  llm.rs  mod.rs  notion.rs  prompts.rs  prompts_adj_adv.txt  prompts_noun.txt  prompts_verb.txt  state.rs
(+16 files in other folders)
